# ofxstatement-santander

./: .gitignore  Makefile  README.md  prospector.yaml  pyproject.toml
.github/workflows/: publish.yaml  tag.yaml  test.yaml
src/ofxstatement/plugins/: santander_uk_qif.py
src/ofxstatement_santander/: santander_uk_qif.py
src/test/: test_get_transaction_type.py  test_parse_qif_file.py
